# agentx

./: .dockerignore  .env.example  .env.production.example  .gitattributes  .gitignore  404.html  CLAUDE.md  Decisions.md  Development-Notes.md  Dockerfile  LICENSE  Memory-Roadmap.md  OpenApi.yaml  PLAN-13.1.md  Readme.md  Release-Notes.md  Repo-Questions.md  Taskfile.yaml  Taskfile.yml  Todo.md  alembic.ini  docker-compose.build.yml  docker-compose.cluster.yml  docker-compose.gateway.expose.yml  docker-compose.gateway.yml  docker-compose.gpu.yml  docker-compose.manager.yml  docker-compose.shell.yml  docker-compose.tunnel.named.yml  docker-compose.tunnel.yml  docker-compose.yml  index.html  mcp_servers.json.example  mkdocs.yml  package.json  pyproject.toml  sitemap.xml  versions.yaml
.claude/: launch.json
.github/workflows/: api-release.yml  ci.yml  client-release.yml  dockerhub-overview.yml  release.yml  resolve-version-conflicts.yml
alembic/: README  baseline.sql  baseline.sql.sha256  env.py  helpers.py
alembic/versions/: 0001_baseline.py  0002_workspaces.py  0003_workspace_allow_shell.py  0004_workspace_shell_backend.py  0005_workspace_projects.py  0006_conversation_state.py  0007_conversation_meta.py  0008_conversation_search_index.py
api/: manage.py
api/agentx_ai/: __init__.py  apps.py  config.py  content_blocks.py  exceptions.py  model_roles.py  settings_manifest.py  test_utils.py  tests.py  tests_memory.py  tokens.py  urls.py  views.py  views_logs.py  workspace_views.py
api/agentx_ai/agent/: __init__.py  aide_swarm.py  ambassador.py  ambassador_storage.py  ambassador_tools.py  audio_gen.py  checkpoint_storage.py  context.py  context_ledger.py  conversation_history.py  conversation_meta.py  (+24 more)
api/agentx_api/: asgi.py  settings.py  urls.py  wsgi.py
api/defaults/: README.md  agent_profiles.yaml  memory_settings.json  prompt_templates.yaml  skills.yaml
api/endpoints/: index.html
api/models/: index.html
architecture/api/: index.html
architecture/client/: index.html
architecture/databases/: index.html
architecture/memory/: index.html
architecture/overview/: index.html
client/: .env.production  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
client/public/: _headers  _redirects
client/src/: App.css  App.tsx  AppPage.tsx  app.tsx  main.tsx  preload.ts  vite-env.d.ts
client/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json  tauri.macos.conf.json
clusters/: .gitignore
clusters/template/: .env.example  nginx.conf.example
deploy/: .env.example  README.md  dockerhub-overview.md  start-manager.bat
deployment/docker/: index.html
deployment/migration/: index.html
development/contributing/: index.html
development/memory-setup/: index.html
development/setup/: index.html
development/tasks/: index.html
development/testing/: index.html
docker/: agentx  entrypoint.sh
docs/: Memory.Prototype.md  README.md  api-endpoints.md  future-feature-pool.md  index.md  roadmap.md  translation-system.md
docs-site/: .gitignore  README.md  astro.config.mjs  middleware.ts  package.json  vercel.json
docs-site/public/: robots.txt
docs-site/scripts/: distill-hero-run.mjs  gen-markdown-manifest.mjs
docs-site/src/: content.config.ts
docs/api/: endpoints.md  models.md
docs/architecture/: CLEANUP_ROADMAP.md  api.md  client.md  databases.md  memory.md  overview.md
docs/deployment/: docker.md
docs/development/: contributing.md  memory-setup.md  setup.md  tasks.md  testing.md
docs/features/: chat.md  drafting.md  memory.md  providers.md  reasoning.md  translation.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
features/chat/: index.html
features/drafting/: index.html
features/mcp/: index.html
features/memory/: index.html
features/prompts/: index.html
features/providers/: index.html
features/reasoning/: index.html
features/translation/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
manager/: .gitignore  Dockerfile  pyproject.toml  pyrightconfig.json
manager/agentx_manager/: __init__.py  cli.py  compose.py  envfile.py  health.py  lifecycle.py  overlays.py  passthrough.py  registry.py  scaffold.py  server.py  spec.py  state.py
manager/tests/integration/: test_gateway_stack.py
manager/tests/unit/: conftest.py  test_health.py  test_lifecycle.py  test_overlays.py  test_scaffold_registry.py  test_server.py
manager/ui/: index.html  package.json  vite.config.ts
manager/ui/src/: App.tsx  api.ts  hooks.ts  index.css
manager/ui/src/components/: BundleDashboard.tsx  ClusterCard.tsx  LogsPanel.tsx  modals.tsx  ui.tsx
manager/ui/src/lib/: connect.ts
plans/: phase-11.7-retrieval-quality.md
queries/: neo4j_schemas.cypher  postgres_builder.sql
queries/migrations/: 0001_initial.sql  0002_user_storage.sql  0003_turn_agent_id.sql  README.md
queries/neo4j_migrations/: 0001_initial.cypher  0002_document_artifact_nodes.cypher  0003_agent_participant_nodes.cypher  0004_goal_conversation_index.cypher  0005_turn_consolidation_tracking.cypher  README.md
roadmap/: index.html
scripts/: README.md  agentx-cluster  agentx-cluster.ps1  capture_stream_fixture.py  check_alembic.py  check_api_parity.py  check_config_keys.py  check_docs.py  check_docs_site.py  check_pyright_baseline.py  resolve_version_conflicts.py
search/: search_index.json
todo/: known-future-issues.md
todo/backlog/: agentic-organizations.md  chat-ux.md  cognitive-os.md  conversation-context.md  deployment-manager.md  engineering-hardening.md  exhibits.md  foundation.md  genome-advisor.md  logging.md  memory-recall.md  misc.md  multimodal.md  open-platform.md  procedural.md  research.md  retrieval-extraction.md  translation-web-search.md  workspaces.md
todo/phases/: completed.md  phase-15-plan-execution.md  phase-16-multi-agent.md  phase-18-ux-memory.md  phase-19-cloud-operation.md
todo/research/: 2026-07-extraction-research.md  2026-07-memory-recall-research.md
(+838 files in other folders)
