[project]
name = "agentx-source"
version = "0.21.119"
description = "AI Agent Platform with MCP Client, Drafting Models & Reasoning Framework"
requires-python = ">=3.10"
dependencies = [
    # Django Framework
    "django>=5.2.8",
    "django-cors-headers>=4.6.0",
    # AI/ML Models
    "torch>=2.9.1",
    "transformers>=4.57.1",
    "sentencepiece>=0.2.1",
    # Vector & Graph Databases
    "faiss-cpu>=1.13.0",
    "neo4j>=6.0.3",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    # MCP Client
    "mcp>=1.0.0",
    # Model Providers
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "httpx>=0.27.0",
    # Token estimation — single source of truth for budgeting (Foundation #6).
    # Pinned explicitly rather than relying on a transitive pull.
    "tiktoken>=0.13.0",
    # Data Validation
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    # Utilities
    "python-iso639>=2025.11.16",
    "python-dotenv>=1.0.0",
    "termcolor>=3.2.0",
    "networkx>=3.0",
    "sentence-transformers>=2.2.0",
    # ASGI Server
    "uvicorn[standard]>=0.34.0",
    # Development Tools
    "ruff>=0.8.0",
    "einops>=0.8.2",
    "pyright>=1.1.0",
    "pip-audit>=2.7.0",
    "bcrypt>=5.0.0",
    # Log-archive encryption (AES-GCM + Scrypt); pinned explicitly rather than
    # relying on a transitive pull so a dependency bump can't drop it.
    "cryptography>=43.0.0",
    "tavily-python>=0.7.25",
    "rich>=15.0.0",
    "alembic>=1.18.4",
    "pypdf>=6.13.3",
]

# ----------------------------------------------------------------------------
# Static analysis — ruff. Lean by design: only rules that earn their keep in this
# repo. Run `task lint:python` (check) / `task lint:python:fix` (safe autofix).
# Rationale for the off-by-design security rules lives in Decisions.md.
# ----------------------------------------------------------------------------
[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
# Note: E501 (line length) is intentionally NOT enforced — the codebase uses a
# deliberate compact-block style; gating on it would be 1600+ findings of noise.
select = [
    "E4", "E7", "E9", "F",  # default set: pyflakes + the real pycodestyle errors
    "B",                     # bugbear — genuine bug patterns (chaining, mutable defaults)
    "C4",                    # flake8-comprehensions
    "PIE",                   # misc anti-patterns
    "UP",                    # pyupgrade — modern syntax for the py3.14 target
    "ASYNC",                 # async correctness — cheap guard (cf. Decisions ADR-1's deadlock)
    "S",                     # flake8-bandit security — guards the raw-SQL / secret surface
]
ignore = [
    "S101",          # asserts are deliberate (and are the point in tests)
    "S110", "S112",  # try/except/pass|continue IS the never-raise / degrade-gracefully idiom (INV-1)
    "S311",          # `random` is for agent-id / jitter, never crypto
]

[tool.ruff.lint.per-file-ignores]
"**/tests*.py" = ["S105", "S108"]  # dummy token + /tmp path in test fixtures
# Audited raw SQL: values are bound (%s / :name / Cypher $params); only static
# fragments or internal identifiers are interpolated. The real fix is the §1.5
# repository layer, not noqa-decoration — see Decisions.md. S608 stays active
# everywhere else to catch NEW raw SQL.
"api/agentx_ai/views.py" = ["S608"]
"api/agentx_ai/kit/agent_memory/memory/semantic.py" = ["S608"]
"api/agentx_ai/management/commands/eval_consolidation.py" = ["S608"]
