[project]
name = "agentx-manager"
version = "0.1.0"
description = "AgentX deployment manager — cluster lifecycle CLI + web GUI over Docker Compose"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.scripts]
agentx-manager = "agentx_manager.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentx_manager"]

[tool.pytest.ini_options]
markers = [
    "docker: integration tests that need a running Docker daemon",
]
addopts = "-m 'not docker'"
testpaths = ["tests"]
